<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:background="@color/d_cream_n_coal"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_bookss"
            android:textSize="22sp"
            android:textColor="@color/d_black_n_white"
            android:padding="8dp"
            android:layout_gravity="center"
            android:fontFamily="@font/friends_font"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_full_pill_light"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etSearchAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_pencil"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/archit_regular"
                        android:gravity="center"
                        android:hint="@string/search_by_author"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:textColor="@color/d_black_n_white"
                        android:textColorHint="@color/d_black_n_white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_rect_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSearchAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_rect_black"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_check_circle_unfilled" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_full_pill_light"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etSearchTitle"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_a"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/archit_regular"
                        android:gravity="center"
                        android:hint="@string/search_by_title"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:textColor="@color/d_black_n_white"
                        android:textColorHint="@color/d_black_n_white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_rect_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSearchTitle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_rect_black"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_check_circle_unfilled" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_full_pill_light"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etSearchLang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_translate"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/archit_regular"
                        android:gravity="center"
                        android:hint="@string/search_by_language"
                        android:inputType="text"
                        android:maxLines="1"

                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:textColor="@color/d_black_n_white"
                        android:textColorHint="@color/d_black_n_white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_rect_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSearchLang"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_rect_black"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_check_circle_unfilled" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_full_pill_light"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etSearchCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_mountains"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/archit_regular"
                        android:gravity="center"
                        android:hint="@string/search_by_country"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:textColor="@color/d_black_n_white"
                        android:textColorHint="@color/d_black_n_white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_rect_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSearchCountry"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_rect_black"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_check_circle_unfilled" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_full_pill_light"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etMinPages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_hash"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/archit_regular"
                        android:gravity="center"
                        android:hint="@string/search_by_min_pages"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:textColor="@color/d_black_n_white"
                        android:textColorHint="@color/d_black_n_white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_rect_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSearchPages"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_rect_black"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_check_circle_unfilled" />
                </LinearLayout>


            </LinearLayout>
        </HorizontalScrollView>
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="0dp"
            android:text="@string/search"
            android:paddingVertical="22dp"
            app:elevation="0dp"
            app:backgroundTint="@color/d_black_n_white"
            app:cornerRadius="48dp"
            android:textColor="@color/d_white_n_black"
            android:fontFamily="@font/friends_font"
            android:minWidth="0dp"
            app:iconTint="@color/d_white_n_black"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_search_basic"
            />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_dashboard_book_horizontal"
            tools:visibility="gone"
            />
        <include
            layout="@layout/layout_no_searches"
            android:id="@+id/noSearchesLayout"
            android:visibility="gone"
            />
        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_shape="linear"
            android:layout_marginHorizontal="12dp"
            android:id="@+id/searchShimmer"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_rect_greys"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_rect_greys"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_rect_greys"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_rect_greys"
                    />
                
            </LinearLayout>
            
        </com.facebook.shimmer.ShimmerFrameLayout>
        
    </LinearLayout>

</androidx.core.widget.NestedScrollView>